# node-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cross.yml  deploy.yml  node-manager.yml
.reuse/: dep5
docker/: Dockerfile-amd64  Dockerfile-arm64
examples/: simple-network.rs
nmgr-admin-wasm-api/: Cargo.toml  admin-demo.html
nmgr-admin-wasm-api/src/: lib.rs
nmgrd/: Cargo.toml  config.toml.example
nmgrd/examples/: make-test-files.rs
nmgrd/src/: config.rs  context.rs  lobby_network.rs  main.rs  ws_api.rs  ws_context.rs
node-manager/: Cargo.toml
node-manager/examples/: simple-network.rs
node-manager/src/: admin.rs  builder.rs  keys.rs  lib.rs  node_table.rs  tests-template.rs
node-manager/tests/: ed25519.rs  hybrid.rs  rsa.rs
node-manager/tests/keys/: test_key13.pem  test_key18.pem  test_key20.pem  test_key5.pem  test_key6.pem  test_key7.pem  test_key9.pem
src/: admin.rs  builder.rs  keys.rs  lib.rs  node_table.rs
tests/: node-manager.rs  test_key2.pem  test_key3.pem  test_key4.pem
tests/keys/: test_key1.pem  test_key10.pem  test_key11.pem  test_key12.pem  test_key14.pem  test_key15.pem  test_key16.pem  test_key17.pem  test_key19.pem  test_key8.pem
