[package]
name = "nmgr-admin-wasm-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
node-manager = { path = "../node-manager" }
base64ct = { version = "1.6", features = ["std"] }
console_error_panic_hook = "0.1.7"

# Enable the js and wasm-bindgen features so that the other crates that
# pull in getrandom work.
getrandom = { version = "0.2", features = ["js"] }
getrandom_01 = { package = "getrandom", version = "0.1", features = ["wasm-bindgen"] }

[lib]
crate-type = ["cdylib", "rlib"]
