[package]
name = "nmgrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-manager = { path = "../node-manager" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.7"
anyhow = "1.0.70"
sha2 = "0.10"
env_logger = "0.10.0"
url = "2.3"
libp2p = { version = "0.51.2", features = ["tokio", "mdns", "gossipsub", "noise", "yamux", "pnet", "rsa", "tcp", "macros"] }
either = "1.5"
