[package]
name = "nmgrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "make-test-files"
bench = false

[features]
vendored = ["tokio-tungstenite/native-tls-vendored"]

[dependencies]
node-manager = { path = "../node-manager" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tokio-tungstenite = "0.18"
toml = "0.7"
toml_edit = "0.19"
anyhow = "1.0.70"
sha2 = "0.10"
env_logger = "0.10.0"
url = "2.3"
libp2p = { version = "0.51.2", features = ["tokio", "mdns", "gossipsub", "noise", "yamux", "pnet", "rsa", "tcp", "macros"] }
libp2p-identity = "0.1.1"
either = "1.5"
log = "0.4"
time = "0.3.17"
base64ct = "1.6"
backon = "0.4"
rand = "0.8"
local-ip-address = "0.5.3"
